# cea-dev

./: .gitignore  README.md  pyproject.toml  reference.md
docs/: crit_impl-plan_v1_ms.md
notebooks/: 01_core_model.ipynb  02_time_horizon.ipynb
src/cea_dev/: core.py  generate_data.py  psa.py  sensitivity.py  time_horizon.py  uncertainty.py  visualization.py
tests/: conftest.py  test_core.py  test_time_horizon.py
